Project buscasam_dwh {
  database_type: 'PostgreSQL'
  Note: '''
    Datawarehouse BUSCASAM - schema `dwh`.
    Snowflake con jerarquia Escuela > Carrera > Materia normalizada.
    Carga incremental diaria via dbt + cron desde PostgreSQL operativo.
  '''
}

// ---------- JERARQUIA ACADEMICA (snowflake) ----------

Table dim_escuela [headercolor: #6B8E4E] {
  id_escuela integer [pk]
  nombre varchar(200) [not null]
}

Table dim_carrera [headercolor: #6B8E4E] {
  id_carrera integer [pk]
  id_escuela integer [not null, ref: > dim_escuela.id_escuela]
  nombre varchar(200) [not null]
}

Table dim_materia [headercolor: #6B8E4E] {
  id_materia integer [pk]
  id_carrera integer [not null, ref: > dim_carrera.id_carrera]
  nombre varchar(200) [not null]
}

// ---------- TIEMPO ----------

Table dim_tiempo [headercolor: #3D5A80] {
  fecha date [pk]
  dia smallint [not null]
  mes smallint [not null]
  cuatrimestre smallint [not null]
  anio smallint [not null]
}

// ---------- ROL Y USUARIO ----------

Table dim_rol [headercolor: #3D5A80] {
  id_rol integer [pk]
  nombre varchar(50) [not null, note: 'estudiante | docente | invitado']
}

Table dim_usuario [headercolor: #3D5A80] {
  id_usuario_sk integer [pk]
  id_usuario_bk integer [not null]
  id_rol integer [not null, ref: > dim_rol.id_rol]
  id_carrera integer [ref: > dim_carrera.id_carrera]
  nombre varchar(200)
  email_hash varchar(64)
  valid_from date [not null]
  valid_to date
  is_current boolean [not null, default: true]

  indexes {
    (id_usuario_bk, is_current) [name: 'idx_dim_usuario_bk_current']
  }
}

// ---------- DOCUMENTO ----------

Table dim_tipo_documento [headercolor: #3D5A80] {
  id_tipo integer [pk]
  nombre varchar(50) [not null, note: 'tesis | paper | trabajo_practico | proyecto_investigacion | monografia | ponencia | apunte | informe_catedra']
}

Table dim_documento [headercolor: #3D5A80] {
  id_documento_sk integer [pk]
  id_documento_bk integer [not null]
  id_tipo integer [not null, ref: > dim_tipo_documento.id_tipo]
  id_materia integer [not null, ref: > dim_materia.id_materia]
  titulo varchar(500) [not null]
  fecha_alta date [not null]
  visibilidad varchar(20) [not null, note: 'publico | interno | privado']
  is_deleted boolean [not null, default: false]
  deleted_at date
  valid_from date [not null]
  valid_to date
  is_current boolean [not null, default: true]

  indexes {
    (id_documento_bk, is_current) [name: 'idx_dim_documento_bk_current']
    (is_deleted, is_current) [name: 'idx_dim_documento_deleted_current']
  }
}

// ---------- BRIDGE PARA CO-AUTORIA ----------

Table bridge_documento_autor [headercolor: #4A4A4A] {
  id_documento_sk integer [not null, ref: > dim_documento.id_documento_sk]
  id_usuario_sk integer [not null, ref: > dim_usuario.id_usuario_sk]
  orden smallint [not null, note: '1 = autor principal/uploader']
  peso numeric(5,4) [not null, note: '1/N con N = cantidad de autores. Evita doble conteo']

  indexes {
    (id_documento_sk, id_usuario_sk) [pk]
  }
}

// ---------- HECHO: BUSQUEDA ----------

Table fact_busqueda [headercolor: #C8553D] {
  id_busqueda bigint [pk, increment]
  fecha date [not null, ref: > dim_tiempo.fecha]
  id_usuario_sk integer [not null, ref: > dim_usuario.id_usuario_sk]

  // Filtros aplicados (nullables - solo se llena el nivel filtrado)
  id_escuela_filtro integer [ref: > dim_escuela.id_escuela]
  id_carrera_filtro integer [ref: > dim_carrera.id_carrera]
  id_materia_filtro integer [ref: > dim_materia.id_materia]
  id_tipo_documento_filtro integer [ref: > dim_tipo_documento.id_tipo]
  fecha_desde_filtro date
  fecha_hasta_filtro date

  // Medidas / atributos del hecho
  query_texto text [not null]
  cant_resultados integer [not null]
  hizo_click boolean [not null]
  session_hash varchar(64)

  indexes {
    fecha [name: 'idx_fact_busqueda_fecha']
    id_materia_filtro [name: 'idx_fact_busqueda_materia']
  }
}

// ---------- HECHO: VISUALIZACION ----------

Table fact_visualizacion [headercolor: #C8553D] {
  id_visualizacion bigint [pk, increment]
  fecha date [not null, ref: > dim_tiempo.fecha]
  id_usuario_sk integer [not null, ref: > dim_usuario.id_usuario_sk]
  id_documento_sk integer [not null, ref: > dim_documento.id_documento_sk]

  indexes {
    fecha [name: 'idx_fact_visualizacion_fecha']
    id_documento_sk [name: 'idx_fact_visualizacion_doc']
  }
}

// ---------- HECHO: PUBLICACION ----------

Table fact_publicacion [headercolor: #C8553D] {
  id_publicacion bigint [pk, increment]
  fecha date [not null, ref: > dim_tiempo.fecha]
  id_usuario_sk integer [not null, ref: > dim_usuario.id_usuario_sk, note: 'Uploader (autor principal)']
  id_documento_sk integer [not null, ref: > dim_documento.id_documento_sk]

  indexes {
    fecha [name: 'idx_fact_publicacion_fecha']
  }
}

// ---------- HECHO: DESCARGA ----------

Table fact_descarga [headercolor: #C8553D] {
  id_descarga bigint [pk, increment]
  fecha date [not null, ref: > dim_tiempo.fecha]
  id_usuario_sk integer [not null, ref: > dim_usuario.id_usuario_sk]
  id_documento_sk integer [not null, ref: > dim_documento.id_documento_sk]

  indexes {
    fecha [name: 'idx_fact_descarga_fecha']
    id_documento_sk [name: 'idx_fact_descarga_doc']
  }
}

// ---------- HECHO: FAVORITO ----------

Table fact_favorito [headercolor: #C8553D] {
  id_favorito bigint [pk, increment]
  fecha date [not null, ref: > dim_tiempo.fecha]
  id_usuario_sk integer [not null, ref: > dim_usuario.id_usuario_sk]
  id_documento_sk integer [not null, ref: > dim_documento.id_documento_sk]
  accion varchar(10) [not null, note: 'agregar | quitar']

  indexes {
    fecha [name: 'idx_fact_favorito_fecha']
    id_documento_sk [name: 'idx_fact_favorito_doc']
    (id_usuario_sk, id_documento_sk) [name: 'idx_fact_favorito_user_doc']
  }
}

// ---------- HECHO: COMENTARIO ----------

Table fact_comentario [headercolor: #C8553D] {
  id_comentario bigint [pk]
  fecha date [not null, ref: > dim_tiempo.fecha]
  id_usuario_sk integer [not null, ref: > dim_usuario.id_usuario_sk, note: 'Solo usuarios registrados (invitados no comentan)']
  id_documento_sk integer [not null, ref: > dim_documento.id_documento_sk]
  id_comentario_padre bigint [ref: > fact_comentario.id_comentario, note: 'NULL = raiz. NOT NULL = respuesta (threading 1 nivel max)']
  esta_oculto boolean [not null, default: false]
  fecha_oculto date [note: 'NULL si nunca fue moderado']

  indexes {
    fecha [name: 'idx_fact_comentario_fecha']
    id_documento_sk [name: 'idx_fact_comentario_doc']
    id_usuario_sk [name: 'idx_fact_comentario_user']
    id_comentario_padre [name: 'idx_fact_comentario_padre']
  }
}

// ---------- CONTROL ETL ----------

Table etl_watermark [headercolor: #4A4A4A] {
  tabla_origen varchar(100) [pk, note: 'Tabla del operativo']
  ultimo_procesado timestamp [not null]
  ultima_corrida timestamp [not null]
}

// =============================================================
// TableGroups - ayudan a la visualizacion en dbdiagram.io
// =============================================================

TableGroup hechos {
  fact_busqueda
  fact_visualizacion
  fact_publicacion
  fact_descarga
  fact_favorito
  fact_comentario
}

TableGroup jerarquia_academica {
  dim_escuela
  dim_carrera
  dim_materia
}

TableGroup dimensiones_planas {
  dim_tiempo
  dim_rol
  dim_usuario
  dim_tipo_documento
  dim_documento
}

TableGroup bridges {
  bridge_documento_autor
}

TableGroup control {
  etl_watermark
}
